# filprofiler

./: .dockerignore  .flake8  .gitignore  .ignore  .venv  CHANGELOG.md  Cargo.toml  Makefile  README.md  RELEASING.md  cflags.py  compile_flags.txt  example.py  generate-kernelspec.py  mempreload.c  memshim.c  pyproject.toml  pyrightconfig.json  requirements-dev.txt  setup.py  test.py  versionscript.txt
.cargo/: config
.changelog/: 10.feature  102.bugfix  105.minor  108.minor  11.feature  113.bugfix  114.feature  117.bugfix  12.feature  133.bugfix  133.feature  135.bugfix  136.bugfix  140.bugfix  143.feature  144.bugfix  147.bugfix  149.bugfix  15.feature  150.bugfix  152.bugfix  154.bugfix  156.bugfix  161.bugfix  167.bugfix  170.bugfix  170.feature  171.enhancement  179.bugfix  185.doc  20.feature  201.feature  202.bugfix  208.bugfix  21.bugfix  215.bugfix  230.bugfix  237.bugfix  242.feature  248.bugfix  (+44 more)
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  main.yml
benchmark-results/: image-translate.json  multithreading-1.json
benchmarks/: Makefile  environment.yml  image-translate.py  lots-of-peaks.py  multithreading.py  pymalloc.pyx  pyobject-bench.py  pystone.py
benchmarks/results/: README.md  image-translate.json  lots-of-peaks.json  multithreading-1.json  pystone.json  version.txt
data_kernelspec/: kernel.json
design/: allocator-overrides.md  mmap.md
docs/: book.toml  build.sh
docs/src/: README.md  SUMMARY.md  api.md  disabling-browser.md  help.md  installation.md  interpreting-output.md  jupyter.md  leaks.md  limitations.md  oom.md  python-program.md  reference.md  threading.md  trying.md
docs/src/fil/: api.md  disabling-browser.md  getting-started.md  how-it-works.md  installation.md  oom.md  other-tools.md  threadpool-disabled.md  understanding.md  using.md  what-it-tracks.md
docs/src/fil4prod/: difference-opensource.md  reliable.md  understanding.md
docs/theme/: fonts.css  head.hbs
extra-licenses/: APSL.txt
filpreload/: Cargo.toml  build.rs  export_symbols.txt  versionscript.txt
filpreload/src/: _filpreload.c  interpose.h  lib.rs  performance.rs
filprofiler/: __init__.py  __main__.py  _cachegrind.py  _filpreload.c  _ipython.py  _profiler.c  _report.py  _script.py  _testing.py  _tracer.py  _utils.py  api.py  licenses.txt  main.c
filprofiler/design/: allocator-overrides.md
filprofiler/tests/: __init__.py  _replacementcode.py  test_not_ipython.py  test_report.py  test_script.py  test_utils.py
memapi/: Cargo.toml  build.rs
memapi/examples/: get_cgroup_available.rs  memory.rs
memapi/proptest-regressions/: memorytracking.txt  rangemap.txt
memapi/src/: callstack.rs  desync.rs  ffi.rs  flamegraph.rs  lib.rs  linecache.rs  memorytracking.rs  mmap.rs  oom.rs  performancetracking.rs  python.c  python.rs  rangemap.rs  util.rs
mempreload/: Cargo.toml  README.md
mempreload/src/: lib.rs
python-benchmarks/: cpp.cpp  cpp.hpp  example.py  fil-interpreter.py  fortran.f90  image-translate.py  ldpreload.py  malloc.py  malloc_on_thread_exit.c  multithreading.py  oom-slow.py  printer.py  pymalloc.pyx  pyobject.py  pystone.py  threaded.py  threaded_aftermain.py
src/: callstack.rs  lib.rs
tests/: test_endtoend.py  test_endtoend_memory.py  test_endtoend_performance.py
tests/test-scripts/: c-thread.py  example.py  fil-interpreter.py  fil_api.py  fortranallocate.py  jupyter.ipynb  ldpreload.py  malloc.py  malloc_on_thread_exit.c  mmaper.py  oom-slow.py  oom.py  pymalloc.pyx  sigusr2.py  source-code.py  tabs.py  thread_exit.py  threaded.py  threaded_aftermain.py  threadpools.py  write-to-file.py
tests/test-scripts/performance/: gil.py  interpreter.py  minimal.py  thread.c  thread_after_main.py  threads.py
wheels/: Dockerfile.build  build-wheel.sh  build-wheels.sh
