[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=7", "setuptools-rust"]

[tool.setuptools_scm]
write_to = "filprofiler/_version.py"

[tool.towncrier]
package = 'filprofiler'
package_dir = '.'
filename = 'CHANGELOG.md'
directory = ".changelog"
template = ".changelog/template.md"
title_format = "# Fil {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/pythonspeed/filprofiler/issues/{issue})"
start_string = "<!-- TOWNCRIER -->\n"
underlines = ["", "", ""]

[tool.cibuildwheel]
# Disable building PyPy wheels, since we use CPython internals, and 3.10 until
# it's ready.
skip = ["pp*"]
