[package]
name = "filpreload"
version = "0.1.0"
authors = ["Itamar Turner-Trauring <itamar@itamarst.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.11.1"
pyo3 = "0.13.2"
[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.3.2"
libc = "0.2"

[dependencies.pymemprofile_api]
path = "../memapi"
features = []

[build-dependencies]
cc = "1.0"

[lib]
name = "filpreload"
crate_type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
