[package]
name = "filpreload"
version = "0.1.0"
authors = ["Itamar Turner-Trauring <itamar@itamarst.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.12"
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = "0.5"
libc = "0.2"

[dependencies.pymemprofile_api]
path = "../memapi"
features = []

[dependencies.pyo3]
version = "0.20"
default-features = false

[build-dependencies]
cc = "1.0"

[lib]
name = "filpreload"
crate_type = ["cdylib"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
