[package]
name = "pymemprofile_api"
version = "0.1.0"
authors = ["Itamar Turner-Trauring <itamar@pythonspeed.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15"
itertools = "0.10"
ahash = "0.7"
derivative = "2.2"
lazy_static = "1.4"
backtrace = "0.3"
once_cell = "1.7"
libloading = "0.7"
libc = "0.2"

[dependencies.inferno]
version = "0.10"
default-features = false

[dependencies.psutil]
version = "3.2"
default-features = false
features = ["memory", "process"]

[dependencies.pyo3]
version = "0.15"
default-features = false
features = []

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.2.6"

[dev-dependencies]
proptest = "1.0"
proc-maps = "0.2.0"

[features]
default = []
# Optimize for the production version of Fil.
fil4prod = []